<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.NavigationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/landing_green"
            android:layout_margin="4dp"
            android:layout_weight="0.7">

            <FrameLayout
                android:id="@+id/start_navigation_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/navigation_status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NAVIGATION OFF"
                        android:textColor="@color/accent"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/navigation_action_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="PRESS TO START A NAVIGATION"
                        android:textColor="@color/accent"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/navigation_status_text" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="86dp"
                        android:layout_height="100dp"
                        android:src="@drawable/navigation_place"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/navigation_status_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/delay"
                android:layout_weight="0.4"
                android:textSize="30sp"
                android:gravity="center"/>

            <Spinner
                android:id="@+id/delay_spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:entries="@array/delay_array" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/simulate_speech_announcment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/landing_green"
        android:text="@string/speech_announc"
        android:textSize="30sp"/>

</LinearLayout>
