<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="false"
    android:orientation="vertical"
    tools:context=".view.SpeechAssistantPage">

    <LinearLayout
        android:id="@+id/fragment_speech_delay"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/delay"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/delay_spinner_speech_assistant_page"
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:entries="@array/delay_array" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_ptt_button"
        style="@style/Theme.InfotAiMOS.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/landing_yellow"
        android:text="@string/button_ptt" />

    <Button
        android:id="@+id/fragment_ttt_button"
        style="@style/Theme.InfotAiMOS.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/landing_yellow"
        android:text="@string/button_ttt" />

    <TextView
        android:id="@+id/fragment_speech_announcement_textView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:background="@color/pale_orange"
        android:gravity="center"
        android:text="@string/text_speech_announcement"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:visibility="invisible" />

</LinearLayout>