...
    <string name="battery_level">Battery Level</string>
    <string name="battery_level_percentage">20</string>
    <string name="battery_notification">Battery Level below %s %%, you should charge your car soon</string>
    <string name="steering_wheel">Steering Wheel</string>
    <string name="vehicle_properties">Vehicle Properties</string>
    <string name="speech_assistant">Speech Assistant</string>
    <string name="tap_to_start">tap to start</string>
    <string name="tap_to_stop">tap to stop</string>
    <string name="recording">Recording</string>
    <string name="button_skip_backward">Skip Backward</string>
    <string name="add_sequence">add sequence</string>
    <string name="save_sequence">save sequence</string>
</resources>

...
