...
            android:id="@+id/tile_test_drive_start_text"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/recording"
            app:layout_constraintBottom_toTopOf="@id/tile_test_drive_start_tap_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tile_test_drive_start_guideline" />

        <TextView
            android:id="@+id/tile_test_drive_start_tap_text"
            style="@style/TextAppearance.AppCompat.Headline"
...
